Fixed SCP 1.1 Bug and Synchronized classes with Java version.
git-svn-id: svn://svn.code.sf.net/p/openfastdotnet/code/trunk@16 3d4b152b-b1bc-45e2-8aef-030da3a0f031

--- a/OpenFast/OpenFAST.csproj
+++ b/OpenFast/OpenFAST.csproj
@@ -138,6 +138,8 @@
     <Compile Include="Session\FastClient.cs" />
     <Compile Include="Session\FastConnectionException.cs" />
     <Compile Include="Session\FastServer.cs" />
+    <Compile Include="Session\LocalConnection.cs" />
+    <Compile Include="Session\LocalEndpoint.cs" />
     <Compile Include="Session\MessageListener.cs" />
     <Compile Include="Session\Multicast\MulticastConnection.cs" />
     <Compile Include="Session\Multicast\MulticastEndpoint.cs" />
