Sync'd up to rev:200: Bug fixes related to SCP 1.1 and AuxId fix (made a new method IsIdNull() in Field.cs). Then their is some unit tests.
git-svn-id: svn://svn.code.sf.net/p/openfastdotnet/code/trunk@37 3d4b152b-b1bc-45e2-8aef-030da3a0f031

--- a/UnitTest/UnitTest.csproj
+++ b/UnitTest/UnitTest.csproj
@@ -61,9 +61,11 @@
     <Compile Include="MessageTest.cs" />
     <Compile Include="Scenario\CmeTemplateTest.cs" />
     <Compile Include="Scenario\ErrorCasesTest.cs" />
+    <Compile Include="Session\SessionControlProtocol_1_1Test.cs" />
     <Compile Include="StringValueTest.cs" />
     <Compile Include="TemplateDictionaryTest.cs" />
     <Compile Include="TemplateTest.cs" />
+    <Compile Include="Template\BasicTemplateRegistryTest.cs" />
     <Compile Include="Test\ObjectMother.cs" />
     <Compile Include="Test\OpenFastTestCase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
