forgot to add csproj file
git-svn-id: svn://svn.code.sf.net/p/openfastdotnet/code/trunk@44 3d4b152b-b1bc-45e2-8aef-030da3a0f031

--- a/UnitTest/UnitTest.csproj
+++ b/UnitTest/UnitTest.csproj
@@ -66,6 +66,11 @@
     <Compile Include="TemplateDictionaryTest.cs" />
     <Compile Include="TemplateTest.cs" />
     <Compile Include="Template\BasicTemplateRegistryTest.cs" />
+    <Compile Include="Template\DynamicTemplateReferenceTest.cs" />
+    <Compile Include="Template\GroupTest.cs" />
+    <Compile Include="Template\MessageTemplateTest.cs" />
+    <Compile Include="Template\SequenceTest.cs" />
+    <Compile Include="Template\TypeTest.cs" />
     <Compile Include="Test\ObjectMother.cs" />
     <Compile Include="Test\OpenFastTestCase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
