[FAST-9] Implemented delta operator for ByteVector and Unicode And wrote unit tests
git-svn-id: svn://svn.code.sf.net/p/openfastdotnet/code/trunk@47 3d4b152b-b1bc-45e2-8aef-030da3a0f031

--- a/OpenFast/OpenFAST.csproj
+++ b/OpenFast/OpenFAST.csproj
@@ -271,6 +271,7 @@
     <Compile Include="Template\Type\StringType.cs" />
     <Compile Include="Template\Type\FASTType.cs" />
     <Compile Include="Template\Type\UnsignedIntegerType.cs" />
+    <Compile Include="UnsupportedOperationException.cs" />
     <Compile Include="Utility\Tuple.cs" />
     <Compile Include="Utility\RecordingInputStream.cs" />
     <Compile Include="Utility\RecordingOutputStream.cs" />
