Made AlertSeverity and ErrorType into enums, normalized protocol and error code names to .NET standard
git-svn-id: svn://svn.code.sf.net/p/openfastdotnet/code/trunk@55 3d4b152b-b1bc-45e2-8aef-030da3a0f031

--- a/OpenFast/OpenFAST.csproj
+++ b/OpenFast/OpenFAST.csproj
@@ -132,7 +132,7 @@
     <Compile Include="Error\ErrorCode.cs" />
     <Compile Include="Error\ErrorHandler.cs" />
     <Compile Include="Error\ErrorType.cs" />
-    <Compile Include="Error\FastAlertSeverity.cs" />
+    <Compile Include="Error\Severity.cs" />
     <Compile Include="Error\FastConstants.cs" />
     <Compile Include="Error\FastDynamicError.cs" />
     <Compile Include="Error\FastException.cs" />
