Renamed Session => Sessions
git-svn-id: svn://svn.code.sf.net/p/openfastdotnet/code/trunk@72 3d4b152b-b1bc-45e2-8aef-030da3a0f031

--- a/UnitTest/UnitTest.csproj
+++ b/UnitTest/UnitTest.csproj
@@ -81,7 +81,7 @@
     <Compile Include="MessageTest.cs" />
     <Compile Include="Scenario\CmeTemplateTest.cs" />
     <Compile Include="Scenario\ErrorCasesTest.cs" />
-    <Compile Include="Session\SessionControlProtocol_1_1Test.cs" />
+    <Compile Include="Sessions\SessionControlProtocol_1_1Test.cs" />
     <Compile Include="StringValueTest.cs" />
     <Compile Include="TemplateDictionaryTest.cs" />
     <Compile Include="TemplateTest.cs" />
