Few more cleanups
git-svn-id: svn://svn.code.sf.net/p/openfastdotnet/code/trunk@73 3d4b152b-b1bc-45e2-8aef-030da3a0f031

--- a/TCPServer/TCPServer.csproj
+++ b/TCPServer/TCPServer.csproj
@@ -58,7 +58,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="FASTMessageListener.cs" />
+    <Compile Include="MessageListener.cs" />
     <Compile Include="FASTServer.cs" />
     <Compile Include="SessionHandler.cs" />
     <Compile Include="Program.cs" />
