--- a/OpenFast/OpenFAST.csproj
+++ b/OpenFast/OpenFAST.csproj
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" ToolsVersion="3.5">
+<Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" ToolsVersion="14.0">
   <PropertyGroup>
     <ProjectType>Local</ProjectType>
     <ProductVersion>9.0.30729</ProductVersion>
@@ -26,10 +26,10 @@
     <FileUpgradeFlags>
     </FileUpgradeFlags>
     <ProjectGuid>{B41B3B40-8E14-45EC-BC3A-311BC8C1C20E}</ProjectGuid>
-    <OldToolsVersion>2.0</OldToolsVersion>
+    <OldToolsVersion>3.5</OldToolsVersion>
     <UpgradeBackupLocation>
     </UpgradeBackupLocation>
-    <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <IsWebBootstrapper>false</IsWebBootstrapper>
     <PublishUrl>publish\</PublishUrl>
     <Install>true</Install>
@@ -45,6 +45,7 @@
     <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <BootstrapperEnabled>true</BootstrapperEnabled>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <OutputPath>bin\Debug\</OutputPath>
@@ -69,6 +70,7 @@
     <DebugType>full</DebugType>
     <ErrorReport>prompt</ErrorReport>
     <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <OutputPath>bin\Release\</OutputPath>
@@ -94,6 +96,7 @@
     <ErrorReport>prompt</ErrorReport>
     <Optimize>true</Optimize>
     <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System">
@@ -218,7 +221,6 @@
     <Compile Include="Template\Loader\XMLMessageTemplateLoader.cs" />
     <Compile Include="Template\LongValue.cs" />
     <Compile Include="Template\MessageTemplate.cs" />
-    <Compile Include="Template\NewCode.cs" />
     <Compile Include="Template\NullTemplateRegistry.cs" />
     <Compile Include="Template\Operators\AlwaysPresentOperatorCodec.cs" />
     <Compile Include="Template\Operators\ConstantOperatorCodec.cs" />
@@ -273,7 +275,6 @@
     <Compile Include="Template\Types\FastType.cs" />
     <Compile Include="Template\Types\UnsignedIntegerType.cs" />
     <Compile Include="UnsupportedOperationException.cs" />
-    <Compile Include="Utility\Tuple.cs" />
     <Compile Include="Utility\RecordingInputStream.cs" />
     <Compile Include="Utility\RecordingOutputStream.cs" />
     <Compile Include="Utility\Util.cs" />
